# Socket-Programming-using-CPP

./: README.md
Client/: CMakeLists.txt  client.cpp
Server/: CMakeLists.txt  server.cpp
Server_Using_MySQL/: CMakeLists.txt  dbOperation.cpp  serverMysql.cpp  validEmail.cpp
